# discord-bugs-bot

./: .env.example  .gitignore  README.md  bot.py  channels_config.json  config.py  pyproject.toml
commands/: __init__.py  basic_commands.py  bug_commands.py  channel_commands.py
events/: __init__.py  bot_events.py
utils/: __init__.py  channel_manager.py
